--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ P5JS test
 <body>
     <main>
     </main>
-    <script "width:500px;height:500px;"src="sketch.js"></script>
+    <script src="sketch.js"></script>
   </body>
 
 
