--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ P5JS test
 </h1>
 <body>
     <main>
+	    <canvas id="defaultCanvas0" class="p5Canvas" width="800" height="800" style="width: 400px; height: 400px;"></canvas>
     </main>
     <script src="sketch.js"></script>
   </body>
